# y2026f

./: .env.example  .gitignore  README.md  docker-compose.yml  skills-lock.json  task.txt  Заметки.md  общие_критерии_оценивания.md  общие_требования.md  промпты.txt  создание_скилла.txt
.agents/skills/olympiad-report/: SKILL.md
appendices/: api-overview.txt  deployment-for-expert.txt  user-manual-by-role.txt
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_roles_and_confirmed_by.py
backend/app/: bootstrap.py  config.py  database.py  deps.py  enums.py  main.py  models.py  role_access.py  security.py  validation_errors.py
backend/app/routers/: auth.py  users.py  voice_commands.py
backend/app/schemas/: __init__.py  auth.py  user.py  voice.py
backend/app/services/: asr.py  audio_convert.py  command_parser.py
backend/tests/: test_command_parser.py  test_role_helpers.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts  errors.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: AdminView.vue  DetailView.vue  HistoryView.vue  LoginView.vue  (+2 more)
report/: 01-vvedenie.txt  02-tehnicheskoe-opisanie.txt  03-baza-dannyh-i-modeli.txt  04-processy-scenarii-potoki.txt  05-realizaciya-algoritmy-testy.txt  06-demonstraciya-razvertyvanie.txt  07-zaklyuchenie.txt  dfd.puml  schema.dbml  use-case.puml  video-demonstration-steps.txt
